salesforce/force-app/main/default/objects/PricingGradeRule__mdt/PricingGradeRule__mdt.object-meta.xml
<CustomObject>
    <description>Phase 19d — Pricing discipline letter grade rules. Five records (A-F) define the thresholds; PricingDisciplineController iterates by Sequence__c and picks the first match.</description>
    <label>Pricing Grade Rule</label>
    <pluralLabel>Pricing Grade Rules</pluralLabel>
</CustomObject>