salesforce/force-app/main/default/objects/PricingGradeRule__mdt/fields/GradeLetter__c.field-meta.xml
<CustomField>
    <fullName>GradeLetter__c</fullName>
    <label>Grade Letter</label>
    <description>One of A, B, C, D, F.</description>
    <type>Text</type><length>1</length><required>true</required><unique>true</unique>
</CustomField>