salesforce/force-app/main/default/objects/PricingGradeRule__mdt/fields/MaxAvgDiscountPct__c.field-meta.xml
<CustomField>
    <fullName>MaxAvgDiscountPct__c</fullName>
    <label>MaxAvgDiscountPct</label>
    <type>Number</type>
    <precision>5</precision><scale>1</scale>
</CustomField>