salesforce/force-app/main/default/objects/PricingGradeRule__mdt/fields/MaxOverridePct__c.field-meta.xml
<CustomField>
    <fullName>MaxOverridePct__c</fullName>
    <label>MaxOverridePct</label>
    <type>Number</type>
    <precision>5</precision><scale>1</scale>
</CustomField>