salesforce/force-app/main/default/objects/PricingGradeRule__mdt/fields/Sequence__c.field-meta.xml
<CustomField>
    <fullName>Sequence__c</fullName>
    <label>Sequence</label>
    <description>Evaluation order, lowest first. A=1, B=2, C=3, D=4, F=5.</description>
    <type>Number</type><precision>3</precision><scale>0</scale>
</CustomField>